# simatomic-api

./: README.md  pyproject.toml
src/: __init__.py  example.py  simatomic_client.py
